tx with some changes (corrected make)

--- a/cpp/model_1/tx/Makefile
+++ b/cpp/model_1/tx/Makefile
@@ -12,9 +12,9 @@ clean:
 	rm -f tx_2 
 #==============================================================
 
-tx: tx_2.o tx_funct_2.o tx_funct_2.hpp
+tx_2: tx_2.o tx_funct_2.o tx_funct_2.hpp 
 
 	$(CXX) -o $@ $^ $(LDLIBS) 
-#==============================================================
 
+#==============================================================
 
