handle multiple transmissions

--- a/cpp/model_1/rxF/Makefile
+++ b/cpp/model_1/rxF/Makefile
@@ -4,7 +4,7 @@ LDLIBS = -luhd -lboost_program_options `itpp-config --libs`
 
 #==============================================================
 
-all:	rx
+all:	rx_m
 
 #==============================================================
 clean:
@@ -12,7 +12,7 @@ clean:
 	rm -f rx 
 #==============================================================
 
-rx: rx.o # rx_funct.o rx_funct.hpp
+rx_m: rx_m.o # rx_funct.o rx_funct.hpp
 
 	$(CXX) -o $@ $^ $(LDLIBS) 
 #==============================================================
