--- a/cpp/model_2/rxF/Makefile
+++ b/cpp/model_2/rxF/Makefile
@@ -12,7 +12,7 @@ clean:
 	rm -f rx_m
 #==============================================================
 
-rx_m: rx_m.o # rx_funct.o rx_funct.hpp
+rx_m: rx_m.o  rx_funct.o rx_funct.hpp
 
 	$(CXX) -o $@ $^ $(LDLIBS) 
 #==============================================================
