latest rx version

--- a/cpp/rx_60GHz/Makefile
+++ b/cpp/rx_60GHz/Makefile
@@ -1,20 +1,18 @@
 #==============================================================
-CXXFLAGS = -o3 -Wall -DNDEBUG -std=c++0x -lpthread
-LDLIBS = -luhd -lboost_program_options
+CXXFLAGS = -o3 -Wall -DNDEBUG -std=c++0x -lpthread  `itpp-config --cflags`
+LDLIBS = -luhd -lboost_program_options `itpp-config --libs`
 
 #==============================================================
  
-all:	rx_60GHz
+all:	rx_60GHz_1
 
 #==============================================================
 clean:
 	rm -f *.o 
-	rm -f rx_60GHz
+	rm -f rx_60GHz_1
+
 #==============================================================
-tx_60GHz: tx_60GHz.o board_60GHz.o board_60GHz.hpp 
-	$(CXX) -o $@ $^ $(LDLIBS) 
-#==============================================================
-rx_60GHz: rx_60GHz_1.o board_60GHz.o board_60GHz.hpp
+rx_60GHz_1: rx_60GHz_1.o board_60GHz.o board_60GHz.hpp rx_funct.o rx_funct.hpp
 	$(CXX) -o $@ $^ $(LDLIBS) 
 
 
